# fritzbox_rest

./: .gitignore  Cargo.toml
config/: defaults.ini.sample  log4rs.yaml
src/: errors.rs  konstanten.rs  lib.rs  main.rs  mobileping.rs  sunsetrise.rs  timertasks.rs
