[package]
edition = "2021"

name = "fritzbox_rest"
version = "0.1.0"
authors = ["Ingo Buescher <gallatin@gmx.net>"]

[dependencies]
reqwest = "0.9.19"

serde = "1.0"
serde-xml-rs = "0.2.1"
serde_derive = "1.0.80"
serde_json = "1.0"

log = "0.3.8"
log4rs = "1"

timer = "0.2.0"
sunrise = "1.0.0"
chrono = "*"
rust-ini = "0.18"

md5 = "0.6.0"
byteorder = "1"

clap = "2"
thiserror = "1.0"
anyhow = "1.0"
