[package]
edition = "2021"

name = "fritzbox_rest"
version = "0.1.0"
authors = ["Ingo Buescher <gallatin@gmx.net>"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

serde = "1.0"
serde-xml-rs = "0.6.0"
serde_derive = "1.0"
serde_json = "1.0"

log = "0.4"
log4rs = "1"

timer = "0.2.0"
sunrise = "1.0.0"
chrono = "*"
rust-ini = "0.18"

md5 = "0.7.0"
byteorder = "1"

clap = { version = "4.1", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
